tests/sksl/errors/ReturnFromVoid.glsl
### Compilation failed:

error: 1: may not return a value from a void function
1 error
